# ControlMicTray

./: .gitignore  ControlMicTray.db  LICENSE  Pipfile  README.md  absolutePath.py  build_exe.ps1  build_exe_no_temp.ps1  convert_to_guid.py  databaseController.py  generate_wrappers.py  main.py  microphoneController.py  microphoneUtil.py  mouse_keyboard_listener.py  pyproject.toml  requirements.txt  setup.cmd  setup.py  startMic.lnk  temp.py  trayIcon.py  trayIconAndWindows.py  ~CreateEXE.py
EXE/: Автозагрузка.lnk
_old/: absolutePath.py
_old/database/: databaseController.py
_old/doc/diagram/: Class.drawio  UseCase.drawio
_old/logic/: hotkeysController.py  microphoneController.py  trayIcon.py
_old/ui/ui/: AboutWindow.ui  AboutWindowUI.py  SettingsWindowUI.py
core/controllers/: audio.py
core/database/: __init__.py
core/events/: __init__.py  signals.py
core/services/: audio.py  autorun.py  hotkey.py  storage.py  system.py  theme.py
core/styles/: __init__.py  icons.py
core/widgets/: __init__.py  about.py  hotkey.py  settings.py  tray.py
core/widgets/ui/: about.py  settings.py
database/: databaseController.py
database/SQL/: CREATE_DATA.sql  CREATE_TABLES.sql  UPDATE_ABOUT_DATA.sql
doc/SQL/: CREATE_DATE.sql  CREATE_TABLES.sql  DROP_TABLE.sql
doc/diagram/: ER.drawio  Package.drawio  Use Case.drawio
gui/: AboutWindow.ui  SettingsWindow.ui
logic/: aboutWindow.py  absolutePath.py  appearanceManager.py  autorunManager.py  hotkeysController.py  microphoneController.py  settingsWindow.py  trayIcon.py
logic/controllers/: databaseController.py  hotkeysController.py  microphoneController.py
logic/pycaw/: pycaw.py  utils.py
logic/windows/: aboutWindow.py  settingsWindow.py  trayIcon.py
misc/doc/diagram/: Activity.drawio
misc/resources/: ErrorWindow.ui
software/: SvgExample.py
software/translate_example/: dialogui.py  mainui.py  zh_CN.qm  zh_CN.ts
src/adapters/audio/: factory.py
src/adapters/audio/windows/: __init__.py  winapi.py
src/core/: entites.py  exceptions.py  repositories.py
src/managers/winos/: manager.py
src/services/: logger.py
src/services/bus/: __init__.py  events.py
ui/: AboutWindow.ui  SettingsWindow_ui.py  aboutWindow.py  settingsWindow.py  styles.py  trayIcon.py
ui/resources/: icons.py
ui/styles/: styles.py
ui/ui/: AboutWindow.ui  AboutWindowUI.py  SettingsWindow.ui  SettingsWindowUI.py
ui/ui_py/: AboutWindow.ui  AboutWindowUI.py  AboutWindow_ui.py  SettingsWindow.ui  SettingsWindowUI.py  SettingsWindow_ui.py  old_AboutWindow.ui  old_SettingsWindow.ui
(+10 files in other folders)
